// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Renders the Home page > snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="feeds-holder"
      >
        <div
          class="flex"
        >
          <aside
            class="flex items-center gap-3 w-1/3"
          >
            <div
              class="relative w-full"
            >
              <input
                class="input search-input"
                placeholder="Search by author or title"
                type="text"
                value=""
              />
              <span
                class="absolute top-[10px] left-4"
              >
                <img
                  alt="search-icon"
                  src="/src/assets/images/search.svg"
                />
              </span>
            </div>
          </aside>
          <div
            class="ml-auto"
          >
             
            <a
              href="/new"
            >
               
              <button
                class="button"
              >
                Create article
              </button>
               
            </a>
          </div>
        </div>
        <div
          class="inner-holder transparent-scrollbar"
        >
          <div
            class="feeds-card animate-pulse"
          >
            <div
              class="bg-gray-300 h-72 w-full rounded-t-2xl"
            />
            <div
              class="p-4"
            >
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="flex"
              >
                <div
                  class="h-3 w-24 bg-gray-300 my-4 rounded-sm"
                />
                <div
                  class="ml-auto h-3 w-20 bg-gray-300 my-4 rounded-sm"
                />
              </div>
            </div>
          </div>
          <div
            class="feeds-card animate-pulse"
          >
            <div
              class="bg-gray-300 h-72 w-full rounded-t-2xl"
            />
            <div
              class="p-4"
            >
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="flex"
              >
                <div
                  class="h-3 w-24 bg-gray-300 my-4 rounded-sm"
                />
                <div
                  class="ml-auto h-3 w-20 bg-gray-300 my-4 rounded-sm"
                />
              </div>
            </div>
          </div>
          <div
            class="feeds-card animate-pulse"
          >
            <div
              class="bg-gray-300 h-72 w-full rounded-t-2xl"
            />
            <div
              class="p-4"
            >
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="flex"
              >
                <div
                  class="h-3 w-24 bg-gray-300 my-4 rounded-sm"
                />
                <div
                  class="ml-auto h-3 w-20 bg-gray-300 my-4 rounded-sm"
                />
              </div>
            </div>
          </div>
          <div
            class="feeds-card animate-pulse"
          >
            <div
              class="bg-gray-300 h-72 w-full rounded-t-2xl"
            />
            <div
              class="p-4"
            >
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="flex"
              >
                <div
                  class="h-3 w-24 bg-gray-300 my-4 rounded-sm"
                />
                <div
                  class="ml-auto h-3 w-20 bg-gray-300 my-4 rounded-sm"
                />
              </div>
            </div>
          </div>
          <div
            class="feeds-card animate-pulse"
          >
            <div
              class="bg-gray-300 h-72 w-full rounded-t-2xl"
            />
            <div
              class="p-4"
            >
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="flex"
              >
                <div
                  class="h-3 w-24 bg-gray-300 my-4 rounded-sm"
                />
                <div
                  class="ml-auto h-3 w-20 bg-gray-300 my-4 rounded-sm"
                />
              </div>
            </div>
          </div>
          <div
            class="feeds-card animate-pulse"
          >
            <div
              class="bg-gray-300 h-72 w-full rounded-t-2xl"
            />
            <div
              class="p-4"
            >
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="flex"
              >
                <div
                  class="h-3 w-24 bg-gray-300 my-4 rounded-sm"
                />
                <div
                  class="ml-auto h-3 w-20 bg-gray-300 my-4 rounded-sm"
                />
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="feeds-holder"
    >
      <div
        class="flex"
      >
        <aside
          class="flex items-center gap-3 w-1/3"
        >
          <div
            class="relative w-full"
          >
            <input
              class="input search-input"
              placeholder="Search by author or title"
              type="text"
              value=""
            />
            <span
              class="absolute top-[10px] left-4"
            >
              <img
                alt="search-icon"
                src="/src/assets/images/search.svg"
              />
            </span>
          </div>
        </aside>
        <div
          class="ml-auto"
        >
           
          <a
            href="/new"
          >
             
            <button
              class="button"
            >
              Create article
            </button>
             
          </a>
        </div>
      </div>
      <div
        class="inner-holder transparent-scrollbar"
      >
        <div
          class="feeds-card animate-pulse"
        >
          <div
            class="bg-gray-300 h-72 w-full rounded-t-2xl"
          />
          <div
            class="p-4"
          >
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="flex"
            >
              <div
                class="h-3 w-24 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="ml-auto h-3 w-20 bg-gray-300 my-4 rounded-sm"
              />
            </div>
          </div>
        </div>
        <div
          class="feeds-card animate-pulse"
        >
          <div
            class="bg-gray-300 h-72 w-full rounded-t-2xl"
          />
          <div
            class="p-4"
          >
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="flex"
            >
              <div
                class="h-3 w-24 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="ml-auto h-3 w-20 bg-gray-300 my-4 rounded-sm"
              />
            </div>
          </div>
        </div>
        <div
          class="feeds-card animate-pulse"
        >
          <div
            class="bg-gray-300 h-72 w-full rounded-t-2xl"
          />
          <div
            class="p-4"
          >
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="flex"
            >
              <div
                class="h-3 w-24 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="ml-auto h-3 w-20 bg-gray-300 my-4 rounded-sm"
              />
            </div>
          </div>
        </div>
        <div
          class="feeds-card animate-pulse"
        >
          <div
            class="bg-gray-300 h-72 w-full rounded-t-2xl"
          />
          <div
            class="p-4"
          >
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="flex"
            >
              <div
                class="h-3 w-24 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="ml-auto h-3 w-20 bg-gray-300 my-4 rounded-sm"
              />
            </div>
          </div>
        </div>
        <div
          class="feeds-card animate-pulse"
        >
          <div
            class="bg-gray-300 h-72 w-full rounded-t-2xl"
          />
          <div
            class="p-4"
          >
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="flex"
            >
              <div
                class="h-3 w-24 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="ml-auto h-3 w-20 bg-gray-300 my-4 rounded-sm"
              />
            </div>
          </div>
        </div>
        <div
          class="feeds-card animate-pulse"
        >
          <div
            class="bg-gray-300 h-72 w-full rounded-t-2xl"
          />
          <div
            class="p-4"
          >
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="flex"
            >
              <div
                class="h-3 w-24 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="ml-auto h-3 w-20 bg-gray-300 my-4 rounded-sm"
              />
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`The component UI should not change 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="feeds-holder"
      >
        <div
          class="flex"
        >
          <aside
            class="flex items-center gap-3 w-1/3"
          >
            <div
              class="relative w-full"
            >
              <input
                class="input search-input"
                placeholder="Search by author or title"
                type="text"
                value=""
              />
              <span
                class="absolute top-[10px] left-4"
              >
                <img
                  alt="search-icon"
                  src="/src/assets/images/search.svg"
                />
              </span>
            </div>
          </aside>
          <div
            class="ml-auto"
          >
             
          </div>
        </div>
        <div
          class="inner-holder transparent-scrollbar"
        >
          <div
            class="feeds-card animate-pulse"
          >
            <div
              class="bg-gray-300 h-72 w-full rounded-t-2xl"
            />
            <div
              class="p-4"
            >
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="flex"
              >
                <div
                  class="h-3 w-24 bg-gray-300 my-4 rounded-sm"
                />
                <div
                  class="ml-auto h-3 w-20 bg-gray-300 my-4 rounded-sm"
                />
              </div>
            </div>
          </div>
          <div
            class="feeds-card animate-pulse"
          >
            <div
              class="bg-gray-300 h-72 w-full rounded-t-2xl"
            />
            <div
              class="p-4"
            >
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="flex"
              >
                <div
                  class="h-3 w-24 bg-gray-300 my-4 rounded-sm"
                />
                <div
                  class="ml-auto h-3 w-20 bg-gray-300 my-4 rounded-sm"
                />
              </div>
            </div>
          </div>
          <div
            class="feeds-card animate-pulse"
          >
            <div
              class="bg-gray-300 h-72 w-full rounded-t-2xl"
            />
            <div
              class="p-4"
            >
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="flex"
              >
                <div
                  class="h-3 w-24 bg-gray-300 my-4 rounded-sm"
                />
                <div
                  class="ml-auto h-3 w-20 bg-gray-300 my-4 rounded-sm"
                />
              </div>
            </div>
          </div>
          <div
            class="feeds-card animate-pulse"
          >
            <div
              class="bg-gray-300 h-72 w-full rounded-t-2xl"
            />
            <div
              class="p-4"
            >
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="flex"
              >
                <div
                  class="h-3 w-24 bg-gray-300 my-4 rounded-sm"
                />
                <div
                  class="ml-auto h-3 w-20 bg-gray-300 my-4 rounded-sm"
                />
              </div>
            </div>
          </div>
          <div
            class="feeds-card animate-pulse"
          >
            <div
              class="bg-gray-300 h-72 w-full rounded-t-2xl"
            />
            <div
              class="p-4"
            >
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="flex"
              >
                <div
                  class="h-3 w-24 bg-gray-300 my-4 rounded-sm"
                />
                <div
                  class="ml-auto h-3 w-20 bg-gray-300 my-4 rounded-sm"
                />
              </div>
            </div>
          </div>
          <div
            class="feeds-card animate-pulse"
          >
            <div
              class="bg-gray-300 h-72 w-full rounded-t-2xl"
            />
            <div
              class="p-4"
            >
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="h-3 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="flex"
              >
                <div
                  class="h-3 w-24 bg-gray-300 my-4 rounded-sm"
                />
                <div
                  class="ml-auto h-3 w-20 bg-gray-300 my-4 rounded-sm"
                />
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="feeds-holder"
    >
      <div
        class="flex"
      >
        <aside
          class="flex items-center gap-3 w-1/3"
        >
          <div
            class="relative w-full"
          >
            <input
              class="input search-input"
              placeholder="Search by author or title"
              type="text"
              value=""
            />
            <span
              class="absolute top-[10px] left-4"
            >
              <img
                alt="search-icon"
                src="/src/assets/images/search.svg"
              />
            </span>
          </div>
        </aside>
        <div
          class="ml-auto"
        >
           
        </div>
      </div>
      <div
        class="inner-holder transparent-scrollbar"
      >
        <div
          class="feeds-card animate-pulse"
        >
          <div
            class="bg-gray-300 h-72 w-full rounded-t-2xl"
          />
          <div
            class="p-4"
          >
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="flex"
            >
              <div
                class="h-3 w-24 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="ml-auto h-3 w-20 bg-gray-300 my-4 rounded-sm"
              />
            </div>
          </div>
        </div>
        <div
          class="feeds-card animate-pulse"
        >
          <div
            class="bg-gray-300 h-72 w-full rounded-t-2xl"
          />
          <div
            class="p-4"
          >
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="flex"
            >
              <div
                class="h-3 w-24 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="ml-auto h-3 w-20 bg-gray-300 my-4 rounded-sm"
              />
            </div>
          </div>
        </div>
        <div
          class="feeds-card animate-pulse"
        >
          <div
            class="bg-gray-300 h-72 w-full rounded-t-2xl"
          />
          <div
            class="p-4"
          >
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="flex"
            >
              <div
                class="h-3 w-24 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="ml-auto h-3 w-20 bg-gray-300 my-4 rounded-sm"
              />
            </div>
          </div>
        </div>
        <div
          class="feeds-card animate-pulse"
        >
          <div
            class="bg-gray-300 h-72 w-full rounded-t-2xl"
          />
          <div
            class="p-4"
          >
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="flex"
            >
              <div
                class="h-3 w-24 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="ml-auto h-3 w-20 bg-gray-300 my-4 rounded-sm"
              />
            </div>
          </div>
        </div>
        <div
          class="feeds-card animate-pulse"
        >
          <div
            class="bg-gray-300 h-72 w-full rounded-t-2xl"
          />
          <div
            class="p-4"
          >
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="flex"
            >
              <div
                class="h-3 w-24 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="ml-auto h-3 w-20 bg-gray-300 my-4 rounded-sm"
              />
            </div>
          </div>
        </div>
        <div
          class="feeds-card animate-pulse"
        >
          <div
            class="bg-gray-300 h-72 w-full rounded-t-2xl"
          />
          <div
            class="p-4"
          >
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="h-3 bg-gray-300 my-4 rounded-sm"
            />
            <div
              class="flex"
            >
              <div
                class="h-3 w-24 bg-gray-300 my-4 rounded-sm"
              />
              <div
                class="ml-auto h-3 w-20 bg-gray-300 my-4 rounded-sm"
              />
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
